force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Insurance Certificate Validation</label>
    <nameField>
        <label>Insurance Certificate Validation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Certificate Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>