force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Accepted__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted?</label>
    <type>Checkbox</type>
</CustomField>