force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Accepted_Override__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accepted_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A hidden field that stores a True/False value indicating whether the individual validation record was overridden separately from the Accept All Value(from the parent Certificate).</description>
    <inlineHelpText>A hidden field that stores a True/False value indicating whether the individual validation record was overridden separately from the Accept All Value(from the parent Certificate).</inlineHelpText>
    <label>_Accepted Override</label>
    <type>Checkbox</type>
</CustomField>