force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>