force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Insurance_Certificate_IR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Insurance_Certificate_IR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Certificate</label>
    <referenceTo>leaseworks__Insurance_Certificate_IR__c</referenceTo>
    <relationshipLabel>Insurance Certificate Validations</relationshipLabel>
    <relationshipName>Insurance_Certificate_Validations</relationshipName>
    <type>Lookup</type>
</CustomField>