force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Insurance_Requirement__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Insurance_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Requirement</label>
    <referenceTo>leaseworks__Insurance_Requirement__c</referenceTo>
    <relationshipName>Insurance_Certificate_Vs_Insurance_Requi</relationshipName>
    <type>Lookup</type>
</CustomField>