force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Long_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Long_Text_Area__c</fullName>
    <label>Long Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>