force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>