force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Percentage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>