force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Text__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Text__c</fullName>
    <label>Text</label>
    <type>TextArea</type>
</CustomField>