force-app/main/default/objects/leaseworks__Insurance_Certificate_Vs_Insurance_Requi__c/fields/leaseworks__Text_Reinsurance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Text_Reinsurance__c</fullName>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>